--- a/css/work.css
+++ b/css/work.css
@@ -11,7 +11,11 @@
 }
 
 .text-container {
-  padding-top: 20px;
+  padding: 10px 0px;
+}
+
+.text-container:last-child {
+  padding-bottom: 100px;
 }
 
 br {
